Added show new category template, controller and form

--- a/templates/inventory/index.html.twig
+++ b/templates/inventory/index.html.twig
@@ -4,4 +4,5 @@
 
 {% block inventory_content %}
     <h1>Inventory Content</h1>
+    <a class="button is-primary" href="{{ path('inventory.category.new') }}">New Category</a>
 {% endblock inventory_content %}
