Changed Controllers structure

--- a/templates/inventories/base_inventories.html.twig
+++ b/templates/inventories/base_inventories.html.twig
@@ -3,12 +3,12 @@
 {% block content %}
     <div class="columns">
         <div class="column is-one-fifth">
-            {% include "inventory/partials/_inventory_menu.html.twig" %}
+            {% include "inventories/partials/_inventory_menu.html.twig" %}
         </div>
 
         <div class="column">
-            {% block inventory_content %}
-            {% endblock inventory_content %}
+            {% block inventories_content %}
+            {% endblock inventories_content %}
         </div>
     </div>
 
