--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -13,8 +13,8 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-            <a href="{{ path('inventory') }}" class="navbar-item">
-                Inventory
+            <a href="{{ path('inventories') }}" class="navbar-item">
+                Inventories
             </a>
 
         </div>
