Created actions and template for inventory creation

--- a/templates/inventories/index.html.twig
+++ b/templates/inventories/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Hello InventoryController!{% endblock %}
 
-{% block inventory_content %}
+{% block inventories_content %}
     <h1>Inventory Content</h1>
-    <a class="button is-primary" href="{{ path('inventory.category.new') }}">New Category</a>
-{% endblock inventory_content %}
+    <a class="button is-primary" href="{{ path('inventories.new') }}">New Inventory</a>
+{% endblock inventories_content %}
