--- a/templates/inventories/partials/_inventory_menu.html.twig
+++ b/templates/inventories/partials/_inventory_menu.html.twig
@@ -1,6 +1,6 @@
 <aside class="menu">
     <p class="menu-label">
-        Categories
+        Inventories
     </p>
     <ul class="menu-list">
         {% for inventory in inventories %}
