Inventory can be edited now. Added validation to Inventory

--- a/templates/inventories/index.html.twig
+++ b/templates/inventories/index.html.twig
@@ -4,5 +4,5 @@
 
 {% block inventories_content %}
     <h1>Inventory Content</h1>
-    <a class="button is-primary" href="{{ path('inventories.new') }}">New Inventory</a>
+    <a class="button is-primary" href="{{ path('inventories.create') }}">New Inventory</a>
 {% endblock inventories_content %}
