--- a/templates/inventories/details.html.twig
+++ b/templates/inventories/details.html.twig
@@ -1,6 +1,8 @@
 {% extends "inventories/base_inventories.html.twig" %}
 
 {% block inventories_content %}
-    <h1>Inventory Details</h1>
+    <h1>Inventory {{ inventory.name }}</h1>
+    <a class="button " href="{{ path('inventories.edit', {slug: inventory.slug}) }}">Edit Inventory</a>
+    <a class="button is-primary" href="{{ path('inventories.products.addProduct', {slug: inventory.slug}) }}">Add Product</a>
 
 {% endblock inventories_content %}
